<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:orientation="vertical"
tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/main_page_toolbar"
                layout="@layout/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false">

                <RelativeLayout
                    android:id="@+id/friends"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/lightgreen"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">


                        <ImageView
                            android:id="@+id/friendicon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/friends" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/friendicon"
                            android:layout_centerHorizontal="true"
                            android:text="@string/friends"
                            android:textSize="16sp"

                            />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/transactions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/red"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">


                        <ImageView
                            android:id="@+id/transicon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:contentDescription="TODO"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/transaction" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/transicon"
                            android:layout_centerHorizontal="true"
                            android:text="@string/transactions"
                            android:textSize="16sp"

                            />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false">

                <RelativeLayout
                    android:id="@+id/chat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/yellow"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">


                        <ImageView
                            android:id="@+id/chat_icon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/chat" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/chat_icon"
                            android:layout_centerHorizontal="true"
                            android:text="@string/chat"
                            android:textSize="16sp"

                            />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/exit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.65"
                    android:background="@color/purple"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">


                        <ImageView
                            android:id="@+id/quit"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerHorizontal="true"
                            android:adjustViewBounds="true"
                            android:padding="8dp"
                            android:scaleType="centerInside"
                            android:src="@mipmap/exit" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/quit"
                            android:layout_centerHorizontal="true"
                            android:text="@string/exit"
                            android:textSize="16sp"

                            />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>